--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ deploy:
   on:
     branch: master
   # environmental vars created in AWS (IAM), and imported in Travis
-  access_key_id: "$AWS_ACESS_KEY"
-  secret_access_key: "$AWS_SECRET_KEY"
+  access_key_id: $AWS_ACCESS_KEY
+  # This one may need to be wrapped in double-quotes
+  secret_access_key: $AWS_SECRET_KEY
 
